--- a/microservices-social-multiplication/pom.xml
+++ b/microservices-social-multiplication/pom.xml
@@ -34,6 +34,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.16.12</version>
 		</dependency>
 
 		<dependency>
