Data layer and Repository are implemented

--- a/microservices-social-multiplication/src/main/resources/application.properties
+++ b/microservices-social-multiplication/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-server.port=8082
+server.port=8084
+
+# Gives us access to the H2 database web console
+spring.h2.console.enabled=true
+
+# Generates the database *only* if it's not there yet
+spring.jpa.hibernate.ddl-auto=true
+
+# Creates the database in a file
+spring.datasource.url=jdbc:h2:file:~/social-multiplication;DB_CLOSE_ON_EXIT=FALSE;
+
+# For educational purposes we will show the SQL in console
+spring.jpa.properties.show_sql=true
