--- a/microservices-social-multiplication/pom.xml
+++ b/microservices-social-multiplication/pom.xml
@@ -37,6 +37,17 @@
 			<version>1.16.12</version>
 		</dependency>
 
+		<!-- JPA Data-Related Dependencies-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
