--- a/microservices-social-multiplication/pom.xml
+++ b/microservices-social-multiplication/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		<!-- Spring AMQP dependency-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 		<!-- Lombok dependency-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
