--- a/microservices-social-multiplication/src/main/resources/application.properties
+++ b/microservices-social-multiplication/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.url=jdbc:h2:file:~/social-multiplication;DB_CLOSE_ON_EXIT=FALS
 
 # For educational purposes we will show the SQL in console
 spring.jpa.properties.show_sql=true
+
+## RabbitMQ configuration
+multiplication.exchange=multiplication_exchange
+multiplication.solved.key=multiplication.solved
