--- a/microservices-social-gamification/pom.xml
+++ b/microservices-social-gamification/pom.xml
@@ -41,6 +41,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.16.12</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- JPA Data-Related Dependencies-->
