--- a/microservices-social-gamification/pom.xml
+++ b/microservices-social-gamification/pom.xml
@@ -44,6 +44,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+	        <groupId>javax.xml.bind</groupId>
+	        <artifactId>jaxb-api</artifactId>
+	        <version>2.0</version>
+	    </dependency>
+	    
 		<!-- JPA Data-Related Dependencies-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
