--- a/microservices-social-multiplication/pom.xml
+++ b/microservices-social-multiplication/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.12</version>
 		</dependency>
+		<dependency>
+	        <groupId>javax.xml.bind</groupId>
+	        <artifactId>jaxb-api</artifactId>
+	        <version>2.0</version>
+	    </dependency>
 
 		<!-- JPA Data-Related Dependencies-->
 		<dependency>
