--- a/otrs-microservice/section-2-microservice-patterns/otrs-restaurant-service/src/main/resources/application.yml
+++ b/otrs-microservice/section-2-microservice-patterns/otrs-restaurant-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 server:
   port: 2222  # HTTP (Tomcat) port
  
-# Discovery Server Access
+# Service Discovery Server Access
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 10    # sends periodic heartbeats to Eureka Server to let it know that it is still alive
@@ -36,7 +36,7 @@ spring:
 server:
   port: 8080
   
-# Discovery Server Access 
+# Service Discovery Server Access 
 eureka:
   instance:
     prefer-ip-address: true   # whether the IP address should be used or not, while updating the client instance details in the Eureka registry
